--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ footer {
     }
     header, footer {
         width: 100%;
-        height: 9vh;
+        height: 90px;
     }
     header {
         display: flex;
@@ -76,6 +76,7 @@ footer {
 }
 
 .logo {
+    margin-top: 10px;
     margin-left: 50px;
     height: 100%;
 }
@@ -97,8 +98,8 @@ a {
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-top: 5px;
     padding: 0px 20px;
+    margin-top: 20px;
     font-size: 20px;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
@@ -122,6 +123,9 @@ p {
     font-size: 16px;
     line-height: 23px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-bottom: 60px;
 }
 
 h1 {
