--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,23 @@ footer {
     
 }
 
+textarea {
+    width:30%;
+    resize: vertical;
+    padding:15px;
+    border-radius:15px;
+    border:0;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+    height:150px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+}
+
+img {
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
 .imag {
     width: 30%;
 }
